--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "Relatório de Ocorrência",
+  "name": "Relatório de Ocorrência Texte",
   "short_name": "Ocorrência",
   "start_url": "index.html",
   "display": "standalone",
