--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "theme_color": "#084808",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icon2-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
